--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,18 @@
   margin: 0;
   padding: 0;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track:hover {
+  background: #ff000040;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ff00007a;
+  border-radius: 1px;
+}
